[gd_scene load_steps=3 format=3 uid="uid://rsma6m3ki10j"]

[ext_resource type="Theme" uid="uid://k51evtrkmadh" path="res://resources/ui_sacrifice_theme.tres" id="1_dkebh"]
[ext_resource type="Script" uid="uid://bvso5m55h38fx" path="res://scripts/sacrifice_ui.gd" id="2_mjb5c"]

[node name="Sacrifice" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_dkebh")
script = ExtResource("2_mjb5c")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_constants/separation = 10

[node name="SacrificePanel" type="Panel" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SacrificeLabel" type="Label" parent="VBoxContainer/VBoxContainer/SacrificePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 44
text = "SACRIFICE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/VBoxContainer/SacrificePanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScorePanel" type="Panel" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/ScorePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/ScorePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 30

[node name="ScoreLabel" type="Label" parent="VBoxContainer/VBoxContainer/ScorePanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 20
text = "SCORE:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Score" type="Label" parent="VBoxContainer/VBoxContainer/ScorePanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 20
text = "123456"
vertical_alignment = 1

[node name="CostLabel" type="Label" parent="VBoxContainer/VBoxContainer/ScorePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 20
text = "100 SCORE = 1 SKILL POINT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainerUpgrades" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
theme_override_constants/separation = 20

[node name="VitalityUpgrade" type="Button" parent="VBoxContainer/HBoxContainerUpgrades"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainerUpgrades/VitalityUpgrade"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Space3" type="Control" parent="VBoxContainer/HBoxContainerUpgrades/VitalityUpgrade/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="StatLabel" type="Label" parent="VBoxContainer/HBoxContainerUpgrades/VitalityUpgrade/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "VITALITY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Space2" type="Control" parent="VBoxContainer/HBoxContainerUpgrades/VitalityUpgrade/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainerUpgrades/VitalityUpgrade/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainerUpgrades/VitalityUpgrade/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12
text = "VITALITY:"
horizontal_alignment = 2

[node name="OldStat" type="Label" parent="VBoxContainer/HBoxContainerUpgrades/VitalityUpgrade/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12
text = "1234
"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainerUpgrades/VitalityUpgrade/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainerUpgrades/VitalityUpgrade/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12
text = "NEW VITALITY:"
horizontal_alignment = 2

[node name="NewStat" type="Label" parent="VBoxContainer/HBoxContainerUpgrades/VitalityUpgrade/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12
text = "1234"

[node name="Space" type="Control" parent="VBoxContainer/HBoxContainerUpgrades/VitalityUpgrade/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="StrengthUpgrade" type="Button" parent="VBoxContainer/HBoxContainerUpgrades"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainerUpgrades/StrengthUpgrade"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Space3" type="Control" parent="VBoxContainer/HBoxContainerUpgrades/StrengthUpgrade/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="StatLabel" type="Label" parent="VBoxContainer/HBoxContainerUpgrades/StrengthUpgrade/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "STRENGTH"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Space2" type="Control" parent="VBoxContainer/HBoxContainerUpgrades/StrengthUpgrade/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainerUpgrades/StrengthUpgrade/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainerUpgrades/StrengthUpgrade/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12
text = "STRENGTH:"
horizontal_alignment = 2

[node name="OldStat" type="Label" parent="VBoxContainer/HBoxContainerUpgrades/StrengthUpgrade/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12
text = "1234
"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainerUpgrades/StrengthUpgrade/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainerUpgrades/StrengthUpgrade/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12
text = "NEW STRENGTH:"
horizontal_alignment = 2

[node name="NewStat" type="Label" parent="VBoxContainer/HBoxContainerUpgrades/StrengthUpgrade/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12
text = "1234"

[node name="Space" type="Control" parent="VBoxContainer/HBoxContainerUpgrades/StrengthUpgrade/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="AgilityUpgrade" type="Button" parent="VBoxContainer/HBoxContainerUpgrades"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainerUpgrades/AgilityUpgrade"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Space3" type="Control" parent="VBoxContainer/HBoxContainerUpgrades/AgilityUpgrade/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="StatLabel" type="Label" parent="VBoxContainer/HBoxContainerUpgrades/AgilityUpgrade/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "AGILITY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Space2" type="Control" parent="VBoxContainer/HBoxContainerUpgrades/AgilityUpgrade/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainerUpgrades/AgilityUpgrade/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainerUpgrades/AgilityUpgrade/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12
text = "AGILITY:"
horizontal_alignment = 2

[node name="OldStat" type="Label" parent="VBoxContainer/HBoxContainerUpgrades/AgilityUpgrade/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12
text = "1234
"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainerUpgrades/AgilityUpgrade/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainerUpgrades/AgilityUpgrade/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12
text = "NEW AGILITY:"
horizontal_alignment = 2

[node name="NewStat" type="Label" parent="VBoxContainer/HBoxContainerUpgrades/AgilityUpgrade/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12
text = "1234"

[node name="Space" type="Control" parent="VBoxContainer/HBoxContainerUpgrades/AgilityUpgrade/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="HBoxContainerButtons" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
alignment = 1

[node name="CancelButton" type="Button" parent="VBoxContainer/HBoxContainerButtons"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("1_dkebh")
text = "CANCEL"

[connection signal="pressed" from="VBoxContainer/HBoxContainerUpgrades/VitalityUpgrade" to="." method="_on_vitality_upgrade_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainerUpgrades/StrengthUpgrade" to="." method="_on_strength_upgrade_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainerUpgrades/AgilityUpgrade" to="." method="_on_agility_upgrade_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainerButtons/CancelButton" to="." method="_on_cancel_button_pressed"]
